@@ -75,7 +75,7 @@ VERTAG = `echo $(GNUSTEP_MAKE_VERSION) | tr '.' '_'`
 
 MAKE_FILES = aggregate.make application.make bundle.make service.make \
 	common.make library-combo.make java.make jni.make library.make \
-	rules.make target.make names.make \
+	rules.make target.make names.make resource-set.make \
 	tool.make ctool.make test-library.make \
 	objc.make test-application.make test-tool.make subproject.make \
 	palette.make gswapp.make gswbundle.make clibrary.make \
@@ -89,7 +89,7 @@ MASTER_MAKE_FILES = \
         application.make bundle.make clibrary.make ctool.make \
         documentation.make framework.make gswapp.make gswbundle.make \
         library.make objc.make java.make java-tool.make palette.make \
-        service.make subproject.make test-application.make \
+        resource-set.make service.make subproject.make test-application.make \
         test-library.make test-tool.make tool.make
 
 INSTANCE_MAKE_FILES = \
@@ -97,7 +97,7 @@ INSTANCE_MAKE_FILES = \
         application.make bundle.make clibrary.make ctool.make \
         documentation.make framework.make gswapp.make gswbundle.make \
         library.make objc.make java.make java-tool.make palette.make \
-        service.make subproject.make test-application.make \
+        resource-set.make service.make subproject.make test-application.make \
         test-library.make test-tool.make tool.make
 
 INSTANCE_SHARED_MAKE_FILES = bundle.make headers.make java.make
