@@ -1,3 +1,12 @@
+Mon Mar  4 16:14:52 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* GNUmakefile.in (MAKE_FILES): Added resource-set.make.
+	(MASTER_MAKE_FILES): Added resource-set.make.
+	(INSTANCE_MAKE_FILES): Added resource-set.make.
+	* resource-set.make: New makefile.
+	* Master/resource-set.make: New makefile.
+	* Instance/resource-set.make: New makefile.
+	
 2002-03-02 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* GNUstep.sh.in: Don't define GNUSTEP_DEFAULTS_ROOT
